--- a/login.html
+++ b/login.html
@@ -1,104 +1,125 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Login Page</title>
-  <link rel="stylesheet" href="style.css">
-  <link rel="stylesheet" type="text/css" href="index.css">
-  <link rel="stylesheet" type="text/css" href="responsive.css">
-  <style>
-    /* Ensure the navbar stays fixed at the top */
-    .navbar {
-      position: fixed;
-      top: 0;
-      width: 100%;
-      z-index: 1000;
-    }
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Login Page</title>
+    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" type="text/css" href="index.css" />
+    <link rel="stylesheet" type="text/css" href="responsive.css" />
+    <style>
+      /* Ensure the navbar stays fixed at the top */
+      .navbar {
+        position: fixed;
+        top: 0;
+        width: 100%;
+        z-index: 1000;
+      }
 
-    /* Add padding to the top of the body to prevent the content from being hidden behind the fixed navbar */
-    body {
-      padding-top: 60px; /* Adjust this value based on the height of your navbar */
-      padding-bottom: 60px; /* Add padding to the bottom to make space for the footer */
-      margin: 0;
-      position: relative; /* Needed to position the pseudo-element */
-      background: none; /* Remove the default background */
-    }
+      /* Add padding to the top of the body to prevent the content from being hidden behind the fixed navbar */
+      body {
+        padding-top: 60px; /* Adjust this value based on the height of your navbar */
+        padding-bottom: 60px; /* Add padding to the bottom to make space for the footer */
+        margin: 0;
+        position: relative; /* Needed to position the pseudo-element */
+        background: none; /* Remove the default background */
+      }
 
-    body::before {
-      content: '';
-      position: fixed;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      background-image: url('image/img1.WEBP');
-      background-size: cover;
-      background-repeat: no-repeat;
-      background-attachment: fixed;
-      background-position: center;
-      filter: blur(5px); /* Adjust the blur amount as needed */
-      z-index: -1; /* Ensure it is behind all other content */
-    }
+      body::before {
+        content: "";
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background-image: url("image/img1.WEBP");
+        background-size: cover;
+        background-repeat: no-repeat;
+        background-attachment: fixed;
+        background-position: center;
+        filter: blur(5px); /* Adjust the blur amount as needed */
+        z-index: -1; /* Ensure it is behind all other content */
+      }
 
-    /* Footer styles to ensure it stays at the bottom */
-    .footer {
-      position: fixed;
-      bottom: 0;
-      width: 100%;
-      background-color: #333; /* Change footer color to #333 */
-      color: #fff; /* Change text color to white for better contrast */
-      text-align: center;
-      padding: 10px 0;
-    }
+      /* Footer styles to ensure it stays at the bottom */
+      .footer {
+        position: fixed;
+        bottom: 0;
+        width: 100%;
+        background-color: #333; /* Change footer color to #333 */
+        color: #fff; /* Change text color to white for better contrast */
+        text-align: center;
+        padding: 10px 0;
+      }
 
-    /* Ensure the container for the login form has a background */
-    .login-container {
-      background-color: rgba(255, 255, 255, 0.9); /* Semi-transparent background */
-      padding: 20px;
-      border-radius: 10px;
-      box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-      margin: 20px;
-    }
-  </style>
-</head>
-<body>
-  <nav class="navbar">
-    <div class="navdiv">
-      <div class="logo"><a href="#">E-ChargeZone</a></div>
-      <ul>
-        <li>
-          <button onclick="location.href='index.php'"><a>Home</a></button>
-        </li>
-        <li>
-          <button onclick="location.href='customerRegister.php'"><a>Sign up</a></button>
-        </li>
-      </ul>
+      /* Ensure the container for the login form has a background */
+      .login-container {
+        background-color: rgba(
+          255,
+          255,
+          255,
+          0.9
+        ); /* Semi-transparent background */
+        padding: 20px;
+        border-radius: 10px;
+        box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        margin: 20px;
+      }
+    </style>
+  </head>
+  <body>
+    <nav class="navbar">
+      <div class="navdiv">
+        <div class="logo"><a href="#">E-ChargeZone</a></div>
+        <ul>
+          <li>
+            <button onclick="location.href='index.php'"><a>Home</a></button>
+          </li>
+          <li>
+            <button onclick="location.href='customerRegister.php'">
+              <a>Sign up</a>
+            </button>
+          </li>
+        </ul>
+      </div>
+    </nav>
+    <div class="login-container">
+      <h2>Customer Login</h2>
+      <form action="login.php" method="POST">
+        <div class="input-container">
+          <label for="username">Telephone Number</label>
+          <input
+            type="text"
+            id="username"
+            name="telNumber"
+            placeholder="Enter your Telephone Number"
+            required
+          />
+        </div>
+        <div class="input-container">
+          <label for="password">Password</label>
+          <input
+            type="password"
+            id="password"
+            name="password"
+            placeholder="Enter your password"
+            required
+          />
+        </div>
+        <button type="submit" name="submiLogin">
+          <a href="customer-AfterLogin.php">Login</a>
+        </button>
+        <div class="links">
+          <a href="#">Forgot password?</a>
+          <a href="customerRegister.php">Sign up</a>
+          <p>Admin <a href="adminlogin.php">Login</a></p>
+        </div>
+      </form>
     </div>
-  </nav>
-  <div class="login-container">
-    <h2>Customer Login</h2>
-    <form action="login.php" method="POST">
-      <div class="input-container">
-        <label for="username">Telephone Number</label>
-        <input type="text" id="username" name="telNumber" placeholder="Enter your Telephone Number" required>
+    <footer class="footer">
+      <div class="container">
+        <p>&copy; Copyright HMPM 2024. All Rights Reserved.</p>
       </div>
-      <div class="input-container">
-        <label for="password">Password</label>
-        <input type="password" id="password" name="password" placeholder="Enter your password" required>
-      </div>
-      <button type="submit" name="submiLogin"><a href="customer-AfterLogin.php">Login</a></button>
-      <div class="links">
-        <a href="#">Forgot password?</a>
-        <a href="customerRegister.php">Sign up</a>
-        <p>Admin  <a href="adminlogin.php">Login</a></p>
-      </div>
-    </form>
-  </div>
-  <footer class="footer">
-    <div class="container">
-      <p>&copy; 2024 E-ChargeZone. All rights reserved.</p>
-    </div>
-  </footer>
-</body>
+    </footer>
+  </body>
 </html>
