edited index and add aptmnt

--- a/login.html
+++ b/login.html
@@ -162,7 +162,7 @@
         /* Hover effect for submit button */
         
         input[type="submit"]:hover {
-            background-color: #45a049;
+            background-color: green;
         }
         /* Styling for the input fields */
         
