des font increase

--- a/page2.html
+++ b/page2.html
@@ -145,7 +145,7 @@
 
     <div class="container">
       <h2 class="h2-fa mb-5">-Description-</h2>
-      <p class="des-p mb-5">
+      <h5 class="des-p mb-5">
         To apply for hostel accommodation at Sabaragamuwa University of Sri
         Lanka, students should submit their application during the registration
         process. This procedure is overseen by the Student Affairs Department.
@@ -153,7 +153,7 @@
         than 40 kilometers from the university. Upon enrollment, the university
         will allocate a hostel to each eligible student, facilitating their
         transition to academic life on campus.
-      </p>
+      </h5>
 
       <div>
         <h2 class="main-hostels-h1">
