--- a/page3.html
+++ b/page3.html
@@ -110,13 +110,13 @@
 
     <div class="container">
         <h2 class="des-h2">-Description-</h2>
-        <p class="des-p">To apply for hostel accommodation at Sabaragamuwa University of Sri
+        <h5 class="des-p">To apply for hostel accommodation at Sabaragamuwa University of Sri
             Lanka, students should submit their application during the registration
             process. This procedure is overseen by the Student Affairs Department.
             Eligibility for hostel facilities is granted to students residing more
             than 40 kilometers from the university. Upon enrollment, the university
             will allocate a hostel to each eligible student, facilitating their
-            transition to academic life on campus.</p>
+            transition to academic life on campus.</h5>
     </div>
 
     <div class="container">
