--- a/page1.html
+++ b/page1.html
@@ -68,10 +68,10 @@
       <div class="container my-5">
         <div class="row d-flex justify-content-center align-items-center">
           <div class="col-5 d-flex justify-content-center">
-            <button class="ctg-btn">For Boys</button>
+            <button class="ctg-btn btn-img1">For Boys</button>
           </div>
           <div class="col-5 d-flex justify-content-center">
-            <button class="ctg-btn">For Girls</button>
+            <button class="ctg-btn btn-img2">For Girls</button>
           </div>
         </div>
       </div>
